trying to fix spacing

--- a/home.css
+++ b/home.css
@@ -11,6 +11,7 @@ body
     justify-content: center;
     margin: auto;
     padding-top: 50px;
+    margin-top: 50px;
 
 }
 
